charts/trivy-job-influx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vuln-scanning
