charts/trivy-job.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vuln-scanning
