charts/bkb-scraper.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: event-aggregator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mosquitto
  name: mosquitto
  namespace: event-aggregator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
      containers:
        - image: eclipse-mosquitto:latest
          name: mosquitto
          volumeMounts:
            - mountPath: "/mosquitto/config/mosquitto.conf"
              name: mosquitto-config
              subPath: mosquitto.conf
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt
  namespace: event-aggregator
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 1883
      name: mqtt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-associator
  name: user-associator
  namespace: event-aggregator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-associator
  template:
    metadata:
      labels:
        app: user-associator
    spec:
      volumes:
        - name: psql-tls-secrets
          secret:
            secretName: psql-client-secret
            optional: true
            defaultMode: 0640
      containers:
        - image: cr.local.ongy.net/bkb-scraper:alpha3
          name: user-associator
          command: ['/root/bkb-caldav-scraper']
          args: ['user-associate']
          volumeMounts:
            - name: psql-tls-secrets
              mountPath: "/psql-tls-secrets"
              readOnly: true
