charts/influxdb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: influxdb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: influxdb
  name: influxdb
  namespace: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      nodeSelector:
        kubernetes.io/hostname: mario
      volumes:
        - name: influxdb2-data
          hostPath:
            path: "/srv/share/backed/appdata/influxdb/influxdb2"
            type: Directory
        - name: influxdb2-config
          hostPath:
            path: "/srv/share/backed/appdata/influxdb/influxdb2-conf/"
            type: Directory
      containers:
        - image: influxdb:2.7
          readinessProbe:
            httpGet:
              path: /health
              port: 8086
          name: influxdb
          volumeMounts:
            - mountPath: "/var/lib/influxdb2"
              name: influxdb2-data
            - mountPath: "/etc/influxdb2"
              name: influxdb2-config
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - protocol: TCP
      port: 8086
      name: influx
