charts/mosquitto.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mosquitto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mosquitto
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      volumes:
        - name: mosquitto-config
          nfs:
            path: /srv/share/backed/appdata/mosquitto/config
            server: mario.local.ongy.net
            readOnly: true
        - name: mosquitto-data
          nfs:
            path: /srv/share/backed/appdata/mosquitto/data
            server: mario.local.ongy.net
            readOnly: false
        - name: mosquitto-log
          nfs:
            path: /srv/share/backed/appdata/mosquitto/log
            server: mario.local.ongy.net
            readOnly: false
      containers:
        - image: eclipse-mosquitto:latest
          name: mosquitto
          volumeMounts:
            - mountPath: "/mosquitto/data"
              name: mosquitto-data
            - mountPath: "/mosquitto/logs"
              name: mosquitto-log
            - mountPath: "/mosquitto/config/mosquitto.conf"
              name: mosquitto-config
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-lb
  namespace: mosquitto
spec:
  type: LoadBalancer
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 1883
      name: mqtt
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 1883
      name: mqtt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: moquitto-proxy
  name: moquitto-proxy
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto-proxy
  template:
    metadata:
      labels:
        app: mosquitto-proxy
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
        - image: alpine/socat
          name: http-proxy
          args:
          - TCP6-LISTEN:1883,reuseaddr,fork
          - TCP:mosquitto:1883
