charts/psql.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: psql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: psql
  name: psql
  namespace: psql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      nodeSelector:
        kubernetes.io/hostname: mario
      volumes:
        - name: psql-data
          hostPath:
            path: "/default/database/pg"
            type: Directory
        - name: psql-wal
          hostPath:
            path: "/default/database/pg_wal"
            type: Directory
      containers:
        - image: postgres:14-alpine
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
          name: psql
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: psql-data
            - mountPath: "/wal"
              name: psql-wal
---
apiVersion: v1
kind: Service
metadata:
  name: psql
  namespace: psql
spec:
  selector:
    app: psql
  ports:
    - protocol: TCP
      port: 5432
      name: postgress
