charts/ingress-proxies.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: httpbin-gateway
# spec:
#   selector:
#     istio: ingressgateway # use Istio default gateway implementation
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: homeassistant-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "homeassistant.local.ongy.net"
    port: 80
    protocol: HTTP
#    allowedRoutes:
#      namespaces:
#        from: Same
