charts/authentik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik

  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest

    # We are setting these to our _desired_ `enforce` level.
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: authentik-redis-pvc
      containers:
        - image: docker.io/library/redis:7
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 996
            runAsGroup: 996
            privileged: false
          name: redis
          volumeMounts:
            - mountPath: "/data"
              name: redis-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      volumes:
      - name: psql-tls-secrets
        secret:
          secretName: psql-client-secret
          optional: true
          defaultMode: 0640
      - name: authentik-media
        nfs:
          path: /srv/share/backed/appdata/authentik/server/media
          server: mario.local.ongy.net
          readOnly: false
      - name: authentik-templates
        nfs:
          path: /srv/share/backed/appdata/authentik/server/templates
          server: mario.local.ongy.net
          readOnly: false
      containers:
      - image: cr.local.ongy.net/authentik/server
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ['ALL']
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 996
          runAsGroup: 996
          privileged: false
        name: server
        args:
        - server
        volumeMounts:
        - name: psql-tls-secrets
          mountPath: "/psql-tls-secrets"
          readOnly: true
        - mountPath: "/media"
          name: authentik-media
          readOnly: false
        - mountPath: "/templates"
          name: authentik-templates
          readOnly: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      volumes:
      - name: psql-tls-secrets
        secret:
          secretName: psql-client-secret
          optional: true
          defaultMode: 0640
      - name: authentik-media
        nfs:
          path: /srv/share/backed/appdata/authentik/server/media
          server: mario.local.ongy.net
          readOnly: false
      - name: authentik-templates
        nfs:
          path: /srv/share/backed/appdata/authentik/server/templates
          server: mario.local.ongy.net
          readOnly: false
      - name: authentik-certs
        nfs:
          path: /srv/share/backed/appdata/authentik/worker/certs
          server: mario.local.ongy.net
          readOnly: false
      containers:
      - image: cr.local.ongy.net/authentik/server
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ['ALL']
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 996
          runAsGroup: 996
          privileged: false
        name: worker
        args:
        - worker
        volumeMounts:
        - name: psql-tls-secrets
          mountPath: "/psql-tls-secrets"
          readOnly: true
        - mountPath: "/media"
          name: authentik-media
          readOnly: false
        - mountPath: "/templates"
          name: authentik-templates
          readOnly: false
        - mountPath: "/certs"
          name: authentik-certs
          readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 9000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: authentik
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      name: http
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authentik
spec:
  gateways: [istio-system/gateway]
  hosts: [authentik.local.ongy.net]
  http:
  - route:
    - destination:
        host: authentik.authentik.svc.cluster.local
---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: authentik
#   namespace: authentik
# spec:
#   policyTypes:
#     - Ingress
#   ingress:
#     - from:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: istio-system
#       ports:
#         - protocol: TCP
#           port: 9000
