charts/paperless.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest

    # We are setting these to our _desired_ `enforce` level.
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: broker
  name: broker
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      volumes:
        - name: redis-data
          nfs:
            path: /srv/share/backed/appdata/paperless/redis
            server: mario.local.ongy.net
            readOnly: false
      containers:
        - image: docker.io/library/redis:7
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
              add: ['NET_BIND_SERVICE']
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 1000
            privileged: false
          name: broker
          volumeMounts:
            - mountPath: "/data"
              name: redis-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: core
  name: core
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: supervisord-config
          configMap:
            name: supervisord-config
        - name: tmp-dir
          emptyDir:
            medium: Memory
            sizeLimit: 500Mi
        - name: var-log
          emptyDir:
            medium: Memory
            sizeLimit: 500Mi
        - name: paperless-data
          nfs:
            path: /srv/share/backed/appdata/paperless/data
            server: mario.local.ongy.net
            readOnly: false
        - name: paperless-media
          nfs:
            path: /srv/share/backed/appdata/paperless/media
            server: mario.local.ongy.net
            readOnly: false
        - name: paperless-export
          nfs:
            path: /srv/share/backed/appdata/paperless/export
            server: mario.local.ongy.net
            readOnly: false
        - name: paperless-consume
          nfs:
            path: /srv/share/backed/appdata/paperless/consume
            server: mario.local.ongy.net
            readOnly: false
        - name: psql-tls-secrets
          secret:
            secretName: psql-client-secret
            optional: false
            defaultMode: 0640
      containers:
        - image: cr.local.ongy.net/paperless-ngx/paperless-ngx:latest
          command: ['/usr/local/bin/supervisord']
          args:
          - -c
          - /etc/supervisord.conf
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
              add: ['NET_BIND_SERVICE']
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            privileged: false
          readinessProbe:
            httpGet:
              path: /
              port: 8000
              httpHeaders:
              - name: Host
                value: paperless.local.ongy.net
          name: core
          volumeMounts:
            #- mountPath: "/usr/src/paperless/src/supervisord.conf"
            - mountPath: "/etc/supervisord.conf"
              name: supervisord-config
              subPath: supervisord.conf
            - mountPath: "/tmp/"
              name: tmp-dir
            - mountPath: "/var/log/supervisord"
              name: var-log
            - mountPath: "/usr/src/paperless/data"
              name: paperless-data
            - mountPath: "/usr/src/paperless/media"
              name: paperless-media
            - mountPath: "/usr/src/paperless/export"
              name: paperless-export
            - mountPath: "/usr/src/paperless/consume"
              name: paperless-consume
            - name: psql-tls-secrets
              mountPath: "/psql-tls-secrets"
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: paperless
spec:
  selector:
    app: core
  ports:
    - protocol: TCP
      port: 8000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: paperless
spec:
  selector:
    app: broker
  ports:
    - protocol: TCP
      port: 6379
      name: http
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: paperless
spec:
  gateways: [istio-system/gateway]
  hosts: [paperless.local.ongy.net]
  http:
  - route:
    - destination:
        host: core.paperless.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: core
  namespace: paperless
spec:
  podSelector:
    matchLabels:
      app: core
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: psql
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: paperless
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: broker
  namespace: paperless
spec:
  podSelector:
    matchLabels:
      app: broker
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: paperless
      ports:
        - protocol: TCP
          port: 6379
