charts/radarr.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
        - name: radarr-config
          nfs:
            path: /srv/share/backed/appdata/radarr/
            server: mario.local.ongy.net
            readOnly: false
        - name: media-data
          nfs:
            path: /srv/share/media
            server: mario.local.ongy.net
            readOnly: false
      containers:
        - image: cr.hotio.dev/hotio/radarr:latest
          readinessProbe:
            httpGet:
              path: /
              port: 7878
          securityContext:
            privileged: true
          name: radarr
          volumeMounts:
            - mountPath: "/config"
              name: radarr-config
            - mountPath: "/data"
              name: media-data
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
      name: http
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: radarr
spec:
  gateways: [istio-system/gateway]
  hosts: [radarr.local.ongy.net]
  http:
  - route:
    - destination:
        host: radarr.radarr.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr
  namespace: radarr
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homeassistant
      ports:
        - protocol: TCP
          port: 7878
